<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="70dp"
    android:background="@drawable/app_bg"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:maxLength="12"
        android:textColorHint="@color/white"
        android:hint="@string/enter_an_expression"
        android:id="@+id/expression"
        android:autofillHints="@string/enter_an_expression"
        android:inputType="number" />

    <TextView
        android:id="@+id/solution"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_below="@+id/expression"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:onClick="zeroBTN"
        android:textColor="@color/white"
        android:textSize="28sp" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/buttons"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/clear_btn"
                android:onClick="clearBTN"
                android:text="@string/ClearTxt" />

            <Button
                android:id="@+id/div"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/other_btn"
                android:onClick="divBTN"
                android:text="@string/DivisionTxt" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/other_btn"
                android:onClick="mulBTN"
                android:text="@string/MultiplyTxt" />

            <ImageButton
                android:id="@+id/backspace"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/other_btn"
                android:contentDescription="@string/backspace"
                android:onClick="backspaceBTN"
                android:src="@drawable/ic_backspace" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons3"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="sevenBTN"
                android:text="@string/SevenTxt" />

            <Button
                android:id="@+id/eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="eightBTN"
                android:text="@string/EightTxt" />

            <Button
                android:id="@+id/nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="nineBTN"
                android:text="@string/NineTxt" />

            <Button
                android:id="@+id/minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/other_btn"
                android:onClick="subBTN"
                android:text="@string/SubTxt" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons4"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="fourBTN"
                android:text="@string/FourTxt" />

            <Button
                android:id="@+id/five"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="fiveBTN"
                android:text="@string/FiveTxt" />

            <Button
                android:id="@+id/six"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="sixBTN"
                android:text="@string/SixTxt" />

            <Button
                android:id="@+id/plus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/other_btn"
                android:onClick="addBTN"
                android:text="@string/AddTxt" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons5"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="oneBTN"
                android:text="@string/OneTxt" />

            <Button
                android:id="@+id/two"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="twoBTN"
                android:text="@string/TwoTxt" />

            <Button
                android:id="@+id/three"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="threeBTN"
                android:text="@string/ThreeTxt" />

            <Button
                android:id="@+id/point"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/other_btn"
                android:onClick="pointBTN"
                android:text="@string/DecimalTxt" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttons6"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/mod"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="modBTN"
                android:text="@string/ModTxt" />

            <Button
                android:id="@+id/zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_bg"
                android:onClick="zeroBTN"
                android:text="@string/ZeroTxt" />

            <Button
                android:id="@+id/equal"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="140dp"
                android:layout_height="70dp"
                android:layout_marginEnd="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/equal_btn"
                android:onClick="equalsBTN"
                android:text="@string/EqualTxt" />


        </LinearLayout>


    </LinearLayout>






</RelativeLayout>